# UR10-control

./: .gitignore  Dockerfile  README.md  README_local.md  Readme.md  Readme.txt  dome_params.csv  dome_poses.csv  generate_dome_poses.py  install_ros1_local.sh  package.xml  patch_findpylon.py  readme_basler  requirements.txt  robotpos_xyz.csv  robotpos_xyz_old.csv
config/: camera_visualization.rviz  ur_camera_visualization.rviz  ur_visualization.rviz
launch/: camera_with_trigger_rviz.launch  ur10_camera_bringup.launch  ur_bringup_rviz.launch
pylon_trigger/: CMakeLists.txt  package.xml
pylon_trigger/config/: camera.yaml
pylon_trigger/launch/: camera_with_trigger_rviz.launch
pylon_trigger/scripts/: trigger_camera.py
src/: move_to_pose.py  move_to_xyz.py  table_marker_publisher.py  ur_hardware_interface.cpp
tmp/: Dockerfile.test  temp_test_python.py
urdf/: table.urdf
